# cueso

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  project.md  technical-architecture.md
.claude/: settings.json
.cursor/: coding_process.mdc
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  config.yml.example  env.example  main.py  pyproject.toml
backend/app/api/: __init__.py  chat.py
backend/app/core/: __init__.py  brave_search.py  config.py  deeplink.py  search_and_play.py  streaming.py
backend/app/core/llm/: __init__.py  provider.py  session.py  session_store.py  tool_executor.py  types.py
backend/app/core/llm/providers/: __init__.py  anthropic.py  openai.py
backend/tests/: __init__.py  conftest.py  helpers.py  test_basic.py  test_brave_search.py  test_chat_simple.py  test_config.py  test_deeplink.py  test_providers.py  test_search_and_play.py  test_session.py  test_session_store.py  test_streaming.py  test_tool_executor.py  test_websocket.py
cli/: README.md  evals.sh  pyproject.toml
cli/cli/: __init__.py  chat_client.py  completer.py  config.py  console_app.py  main.py  session_manager.py
cli/evals/: __main__.py  run.py
cli/tests/: __init__.py  test_cli.py
docs/: websocket-protocol.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  types.ts
frontend/src/components/: ChatView.tsx  ContentCards.tsx  InputBar.tsx  MessageBubble.tsx
frontend/src/hooks/: useSpeechRecognition.ts  useWebSocket.ts
scripts/: build  dev
