[project]
name = "cueso-backend"
version = "0.1.0"
description = "Voice/text-controlled Roku system using LLMs"
authors = [
    {name = "jemonjam", email = "jacob.e.meacham@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"

dependencies = [
    # Core Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings[yaml]>=2.1.0",
    "httpx>=0.25.0",
    "aiofiles>=24.0.0",

    # LLM Providers
    "anthropic>=0.8.0",
    "openai>=1.3.0",
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.0.0",
    # Code Quality
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
cueso = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "RUF"]
ignore = ["E501", "B008"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.pyright]
include = ["app", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
