[project]
name = "cueso-cli"
version = "0.1.0"
description = "CLI frontend for Cueso backend"
authors = [
    {name = "Cueso Team", email = "team@cueso.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
cueso = "cli.main:main"
cueso-evals = "evals.run:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.330",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli*", "evals*"]

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]
fixable = ["ALL"]

[tool.pyright]
include = ["cli", "evals"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
